--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 
 branches:
   only:
-    - master
+    - main
 
 # Travis CI 서버의 Home
 cache:
@@ -14,7 +14,7 @@ cache:
 
 script: "./gradlew clean build"
 
-# CI 실행 완료시 메일로 알람 test
+# CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
